apps/base/plane/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plane-ingressroute
  namespace: plane
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`plane.wc`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: plane-api
          port: 8000
    - match: Host(`plane.wc`) && PathPrefix(`/auth`)
      kind: Rule
      services:
        - name: plane-api
          port: 8000
    - match: Host(`plane.wc`) && PathPrefix(`/live/`)
      kind: Rule
      services:
        - name: plane-live
          port: 3000
    - match: Host(`plane.wc`) && PathPrefix(`/spaces`)
      kind: Rule
      services:
        - name: plane-space
          port: 3000
    - match: Host(`plane.wc`) && PathPrefix(`/god-mode`)
      kind: Rule
      services:
        - name: plane-admin
          port: 3000
    - match: Host(`plane.wc`) && PathPrefix(`/uploads`)
      kind: Rule
      services:
        - name: plane-minio
          port: 9000
    - match: Host(`plane.wc`)
      kind: Rule
      services:
        - name: plane-web
          port: 3000
